# simworks

./: .coverage  .dockerignore  .gitignore  .gitleaksignore  .output.txt  .pre-commit-config.yaml  AGENTS.md  BUILD_RESULT_REFACTOR_PLAN.md  CLAUDE.md  Dockerfile  Makefile  ORCHESTRAI_SERVICE_EXECUTION_REVIEW.md  PERSISTENCE_HANDLERS_IMPLEMENTATION.md  PROJECT_OVERVIEW.md  README.md  SECURITY.md  checks.md  codecov.yml  conftest.py  coverage.xml  implementation-plan.md  localhost.crt  localhost.key  openapi.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  tailwind.config.js
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-push-package.yml  cd-promote.yml  cd-release.yml  cd-staging.yml  ci.yml  promote-to-prod.yml  release-rc.yml  security.yml  test.yml
SimWorks/: AGENTS.md
SimWorks/ChatLab/: admin.py  apps.py  constants.py  consumers.py  models.py  signals.py  tests.py  urls.py  utils.py  views.py
SimWorks/MedLab/: apps.py  consumers.py  models.py  tests.py  urls.py  views.py
SimWorks/SimManAI/: admin.py  apps.py  async_client.py  client.py  models.py  openai_gateway.py  output_schemas.py  parser.py  prompts.py  signals.py  tests.py  urls.py
SimWorks/SimWorks/: asgi.py  logging.py  settings.py  urls.py  wsgi.py
SimWorks/accounts/: admin.py  forms.py  models.py  schema.py  urls.py  views.py
SimWorks/api/: __init__.py
SimWorks/chatlab/: admin.py  apps.py  consumers.py  models.py  schema.py  signals.py  tests.py  urls.py  utils.py  views.py
SimWorks/config/: ENVIRONMENT.md  asgi.py  auth_settings.py  billing_settings.py  celery.py  email_settings.py  logging.py  middleware.py  observability_settings.py  orca.py  privacy_settings.py  schema.py  security_settings.py  settings.py  settings_parsers.py  task_settings.py  urls.py  wsgi.py
SimWorks/core/: consumers.py  context_processors.py  decorators.py  middleware.py  models.py  outbox.py  ratelimit.py  routing.py  tasks.py  utils.py  views.py
SimWorks/services/: openai_chat.py
SimWorks/simai/: admin.py  apps.py  async_client.py  client.py  models.py  openai_gateway.py  output_schemas.py  parser.py  prompts.py  prompts_v1.py  response_schema.py  schema.py  signals.py  structured_output.py  tasks.py  urls.py  views.py
SimWorks/simcore/: __init__.py  admin.py  apps.py  history_registry.py  models.py  schema.py  signals.py  urls.py  utils.py  views.py
SimWorks/simulation/: __init__.py  admin.py  apps.py  history_registry.py  models.py  modifiers.py  schema.py  signals.py  urls.py  utils.py  views.py
SimWorks/templates/: 403.html  403_csrf.html  404.html  base.html  robots.txt  simulation_watch.html
SimWorks/trainerlab/: apps.py  models.py  schema.py  urls.py  utils.py  views.py
docker/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.Docker.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  entrypoint.dev.sh  entrypoint.prod.sh  entrypoint.sh  healthcheck.sh  run-backup-cron.sh
docker/scripts/: build-check-simcore.sh  build-check.sh  build-run_service.sh  build-run_service_dry.sh  build.sh  check-simcore.sh
docs/: DEPLOYMENT_TAGS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_API_V1.md  IMPLEMENTATION_PLAN_v2.md  INSTRUCTION_REFACTOR_PLAN.md  ORCHESTRAI_INTEGRATION_COMPLETE.md  PLAN_REVIEW.md  README.md  SCHEMA_MODERNIZATION_SUMMARY.md  SCHEMA_REVIEW_AND_UPDATE_PLAN.md  SIMWORKS_SCHEMA_REVIEW.md  SIMWORKS_SCHEMA_REVIEW_AND_PLAN.md  TRAINERLAB_IMPROVEMENTS.md  WEBSOCKET_EVENTS.md  architecture.md  flatten_unions_evaluation.md  guards.md  index.md  management-commands.md  migration-django6-partials.md  openai_schema_notes.md  quick-start.md  schema_pipeline_architecture.md  schema_workflow_map.md  test_coverage_plan.md  trainerlab-ios-backend-contract.md  trainerlab-sse-contract.md
docs/agents/: README.md  ai-and-prompting.md  architecture-and-boundaries.md  domain-simulation-rules.md  repo-standards.md  testing-and-quality.md
docs/architecture/: accounts-billing-entitlements.md  billing-product-catalog.md  celery_like_app.md
docs/compliance/: data-map.md  privacy-implementation.md  processors.md  retention-policy.md  service-call-linkage-followup.md
docs/meta/: documentation_audit.md  documentation_map.md
docs/openapi/: v1.json
docs/operations/: backups.md
docs/testing/: coverage_policy.md  lanes.md  ownership.md
nginx/: custom-nginx.conf  default.conf  default.dev.conf  dev.conf  nginx-entrypoint.sh  nginx.template.conf
notes/: buttons.md  formatter_usage_guide.md  response_analytics_cheatsheet.md
scripts/: export_openapi.py
src/: manage.py
src/SimWorks/: asgi.py  settings.py  wsgi.py
src/templates/: 404.html  display_messages.html
static/ChatLab/: chat.css
static/MedLab/: style.css
static/accounts/: style.css
static/core/: style.css
static/css/: button.css  header.css  registration.css  theme.css
tests/: conftest.py  settings_test.py  test_celery_like_app.py  test_fixup_coercion.py  test_formatter.py  test_nginx_sse_config.py  test_settings_parsers.py  test_watch_views.py
tests/accounts/: test_account_email_adapter.py  test_create_dev_user_command.py  test_dump_users_command.py  test_invitation_access_architecture.py  test_restore_users_command.py  test_seed_roles_command.py  test_social_auth_templates.py  test_staging_invite_emails.py
tests/api/: test_accounts_billing.py  test_api_foundation.py  test_build_info.py  test_conversations.py  test_correlation_id.py  test_events.py  test_events_catchup.py  test_feedback.py  test_jwt_auth.py  test_lab_orders.py  test_messages.py  test_modifiers.py  test_openapi.py  test_ratelimit.py  test_simulations.py  test_tools.py  test_trainerlab.py  test_ws_envelope.py
tests/assessments/: conftest.py  test_models.py  test_persistence.py  test_rubric_resolution.py  test_scoring.py  test_sync_command.py
tests/backups/: test_backup_system.py
tests/billing/: test_catalog_and_entitlements.py
tests/chatlab/: __init__.py  test_consumers.py  test_failure_signals.py  test_image_tasks.py  test_message_flow.py  test_patient_schemas.py  (+7 more)
(+1041 files in other folders)
