[project]
name = "SimWorks"
version = "0.6.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "celery>=5.6.0",
    "channels>=4.3.2",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django-autoslug>=1.9.9",
    # "django-celery-beat>=2.8.1",
    "django-htmx>=1.27.0",
    "django-imagekit>=5.0.0",
    "django-polymorphic>=4.4.0",
    "django-redis>=6.0.0",
    "faker==38.2.0",
    "httpcore>=1.0.9",
    "logfire[django]==4.16.0",
    "openai>=2.11.0",
    "opentelemetry-instrumentation-httpx>=0.58b0",
    "pillow>=11.3.0",
    "pre-commit>=4.5.0",
    "psycopg>=3.2.12",
    "psycopg-binary>=3.3.2",
    "pydantic==2.12.5",
    "pydantic-django>=0.1.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "redis>=7.1.0",
    "strawberry-graphql-django==0.70.1",
    "typing-extensions>=4.15.0",
    "zope-interface==8.1.1",
    "python-slugify>=8.0.4",
    "orchestrai",
    "orchestrai-django",
    "django>=6.0",
    "strawberry-graphql>=0.287.3",
]

[tool.uv.workspace]
members = ["packages/orchestrai", "packages/orchestrai_django"]

[tool.uv.sources]
orchestrai-django = { workspace = true }
orchestrai = { workspace = true }

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests/*.py", "tests/**/*.py"]
addopts = [
    "-ra",
    "--cov=SimWorks",
    "--cov=packages/orchestrai/src/orchestrai",
    "--cov=packages/orchestrai_django/src/orchestrai_django",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
